testsuite/tests/indexed-types/should_fail/SimpleFail2a.stderr

SimpleFail2a.hs:11:3: error:
    • Type indexes must match class instance head
      Expected: Sd Int
        Actual: Sd a
    • In the data instance declaration for ‘Sd’
      In the instance declaration for ‘C Int’

SimpleFail2a.hs:11:11: error:
    Conflicting family instance declarations:
      Sd a -- Defined at SimpleFail2a.hs:11:11
      Sd Int -- Defined at SimpleFail2a.hs:12:11
